Fix ugly whitespace for DateSelector

--- a/src/common/components/input/checkbox.module.scss
+++ b/src/common/components/input/checkbox.module.scss
@@ -4,7 +4,6 @@
 .checkbox {
   display: flex;
   position: relative;
-  padding-left: 2rem;
   margin-bottom: 1.25rem;
   cursor: pointer;
   font-size: 1rem;
